test/grammar/attr_operator/config_inside/insert/dict_fail_0/stderr.golden
error[E2L23]: CompileError
 --> ${CWD}/main.k:3:5
  |
3 |     a[b] += [1, 2, 3]
  |     ^ name 'a' is not defined
  |